fix: fix aligning issue

--- a/src/components/LimitedTime/LimitedTime.module.scss
+++ b/src/components/LimitedTime/LimitedTime.module.scss
@@ -197,10 +197,13 @@
 
             .progress {
               position: absolute;
-              top: -25%;
-              left: 50%;
-              transform: translateX(-50%) translateY(-50%);
+              inset: 0;
+              margin: 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
               width: 100%;
+              line-height: 1;
             }
 
             .popularWrap {
